# esp-weight_hmi_p4

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/bsp_extra/: idf_component.yml
components/esp32_p4_wifi6_touch_lcd_x/: CMakeLists.txt  Kconfig  README.md  esp32_p4_wifi6_touch_lcd_x.c  idf_component.yml
components/esp32_p4_wifi6_touch_lcd_x/include/bsp/: display.h  esp-bsp.h  esp32_p4_wifi6_touch_lcd_x.h
components/weight_audio/: CMakeLists.txt  weight_audio.c
components/weight_audio/include/: weight_audio.h
components/weight_config/: CMakeLists.txt  weight_config.c
components/weight_config/include/: weight_config.h
components/weight_evaluator/: CMakeLists.txt  weight_evaluator.c
components/weight_evaluator/include/: weight_evaluator.h
components/weight_model_store/: CMakeLists.txt  idf_component.yml  weight_model_store.c
components/weight_model_store/include/: weight_model_store.h
components/weight_mqtt/: CMakeLists.txt  idf_component.yml  weight_mqtt.c
components/weight_mqtt/include/: weight_mqtt.h
components/weight_state/: CMakeLists.txt  weight_state.c
components/weight_state/include/: weight_state.h
components/weight_time/: CMakeLists.txt  weight_time.c
components/weight_time/include/: weight_time.h
components/weight_uart/: CMakeLists.txt  weight_uart.c
components/weight_uart/include/: weight_uart.h
components/weight_ui/: CMakeLists.txt  weight_ui.c
components/weight_ui/fonts/: lv_font_montserrat_bold_128.c  lv_font_montserrat_bold_178.c  lv_font_nato_sans_jp_bold_14.c  lv_font_nato_sans_jp_bold_16.c  lv_font_nato_sans_jp_bold_24.c
components/weight_ui/i18n/: lang_en.h  lang_ja.h  weight_i18n.c  weight_i18n.h
components/weight_ui/include/: weight_ui.h
components/weight_ui/screens/: screen_keyboard.c  screen_main.c  screen_model_edit.c  screen_models.c  screen_mqtt.c  screen_settings.c  screen_wifi.c  ui_loading.c  ui_loading.h  ui_theme.h
components/weight_wifi/: CMakeLists.txt  weight_wifi.c
components/weight_wifi/include/: weight_wifi.h
main/: CMakeLists.txt  idf_component.yml  main.c
spiffs/: README.md
supabase/: 0001_weight_scale_hmi.sql
